# antigravity-hub

./: .dockerignore  .gitignore  QWEN.md  README.md  README_EN.md  SETUP_NOTES.md  index.html  opencode.json  package-lock.json  package.json  tailwind.config.js  test.rs  vite.config.ts
.omo/run-continuation/: ses_10cd82e2bffeO73bSeQobVflMw.json  ses_10cd8fd39ffefm5PsPDSpLUzci.json  ses_146733fe5ffedxh7XUdUuDlU1R.json
.qwen/: settings.json
deploy/arch/: PKGBUILD.template
docker/: Dockerfile  Dockerfile.backend  Dockerfile.backend.localdist  docker-compose.backend.yml  docker-compose.localdist.yml
docs/: adaptive_mode_test_examples.md  advanced_configuration.md  fix-opus-ultra-priority.md  fix_claude_code_tool_use.md  gemini-3-image-guide.md  model-remapping-logic.md  test_503_issue.md
docs/testing/: ip_security_test_report.md  opencode_sync_verification_checklist.md
scripts/: MANUAL_PR_CLOSE_GUIDE.md  close_integrated_prs.sh
src/: App.css  App.tsx  i18n.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: constants.rs  error.rs  lib.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/models/: apikey.rs  config.rs  mod.rs  model.rs  platform.rs
src-tauri/src/modules/: config.rs  i18n.rs  key_model_map.rs  keystore.rs  log_bridge.rs  logger.rs  mod.rs  model_manager.rs  platform_manager.rs  proxy.rs  quota_window.rs  scheduler.rs  token_stats.rs
src-tauri/src/utils/: http.rs
src/locales/: ar.json  en.json  es.json  ja.json  (+8 more)
web_site/: index.html
workflows/: ci.yml  deploy-pages.yml  release.yml
(+43 files in other folders)
