[package]
name = "antigravity_tools"
version = "5.0.0"
description = "Multi-platform API Account Manager - Simplified Edition"
authors = ["you"]
license = "CC-BY-NC-SA-4.0"
edition = "2021"

[lib]
name = "antigravity_tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "^2.2.5", features = [] }

[dependencies]
tauri = { version = "^2.2.5", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = "0.4"
dirs = "5.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking", "stream"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
tracing-log = "0.2"
tracing-appender = "0.2"
parking_lot = "0.12"
tokio = { version = "1", features = ["full"] }
url = "2.5.7"
thiserror = "2.0.17"
futures = "0.3"
rand = "0.8"
once_cell = "1.19"
regex = "1.12.2"
anyhow = "1.0"
axum = "0.7"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
